[package]
name = "talk-theme-board"
version = "0.1.0"
authors = ["KoharaKazuya"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
tauri-build = { version = "1.0.0-rc.1", features = [] }

[dependencies]
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
tauri = { version = "1.0.0-rc.2", features = ["global-shortcut-all", "process-exit", "shell-open"] }
anyhow = "1.0.53"
pulldown-cmark = { version = "0.9.1", default-features = false }

[dev-dependencies]
indoc = "1.0.3"

[features]
# by default Tauri runs in production mode
# when `tauri dev` runs it is executed with `cargo run --no-default-features` if `devPath` is an URL
default = [ "custom-protocol" ]
# this feature is used used for production builds where `devPath` points to the filesystem
# DO NOT remove this
custom-protocol = [ "tauri/custom-protocol" ]
